Fix searchbar overflow

--- a/PROJECT/BuyHub/src/main/webapp/css/style.css
+++ b/PROJECT/BuyHub/src/main/webapp/css/style.css
@@ -698,3 +698,8 @@ div.box
         display: none;
     }
 }
+
+
+.navbar-collapse
+{
+}
